tests/rt/pos/ifc/cliargs01.trp
(* Test getCliArgs with root authority - returns empty list when no args *)
let val args = getCliArgs authority
in print args
end
