tests/rt/neg/ifc/cliargs02.trp
(* Test getCliArgs with attenuated authority - should fail *)
let val lowAuth = attenuate (authority, `<bob ; bob>`)
in getCliArgs lowAuth
end
